Embedded youtube video & minor style modifications

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  iframe(width="560", height="315", src="https://www.youtube.com/embed/kODcCcxY6bw?controls=0", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen)
